# dolce_building_company

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1e37f23d777a_add_settings_table.py  b6ca5d78a92b_init.py  bfb7dcb1e3ac_add_completed_projects_photos_table.py  d79279fdd45e_add_photo_table_for_houses.py
app/application/dtos/: completed_projects.py  house.py  settings.py  user.py
app/application/exceptions/: base.py  house.py
app/application/interactors/completed_project/: get_list.py
app/application/interactors/general/: get_contact_info.py
app/application/interactors/house/: get_by_id.py  get_list.py
app/application/interactors/user/: create.py
app/bot/: main.py
app/bot/handlers/: __init__.py
app/bot/handlers/user/: command_start.py  completed_projects.py  contact.py  create_bid.py  house_list.py
app/bot/keyboards/user/: main_menu.py
app/bot/messages/: create_bid_messages.py  user_messages.py
app/bot/states/: user.py
app/core/: __init__.py
app/core/config/: __init__.py  database.py  tg_bot.py
app/core/dependencies/: base.py  container.py  interactors.py  repositories.py
app/infrasructure/database/: connection.py
app/infrasructure/database/models/: base.py  completed_projects.py  house.py  settings.py  user.py
app/infrasructure/database/transaction_manager/: base.py  sqlalchemy.py
app/infrasructure/repositories/completed_projects/: base.py  sqlalchemy_repository.py
app/utils/: __init__.py  time_now_remove_tz.py
(+6 files in other folders)
