[tool.poetry]
name = "dolce"
version = "0.1.0"
description = ""
authors = ["KamaZ <kamaz_2564@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.22.0"
sqlalchemy = "^2.0.44"
asyncpg = "^0.30.0"
alembic = "^1.17.2"
dishka = "^1.7.2"
pydantic-settings = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
